--- a/.env
+++ b/.env
@@ -6,7 +6,11 @@
 
 # Make sure to override these in deployment
 DATABASE_URL="postgresql://postgres:@localhost:5432/trpc-starter-websockets?schema=public"
-APP_URL="http://localhost:3000"
-WS_URL="ws://localhost:3001"
-NEXTAUTH_URL="http://localhost:3000/api/auth"
+APP_URL="http://localhost:3001"
+WS_URL="ws://localhost:3044"
+NEXTAUTH_URL="http://localhost:3001/api/auth"
 # NEXTAUTH_SECRET=""
+
+UPLOADTHING_SECRET=test
+UPLOADTHING_APP_ID=test
+UPLOADTHING_URL=http://localhost:3001
