--- a/package.json
+++ b/package.json
@@ -46,13 +46,16 @@
     "@trpc/next": "^10.37.1",
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
+    "@uploadthing/react": "^5.3.0",
     "clsx": "^2.0.0",
     "next": "^13.4.8",
     "next-auth": "^4.22.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "superjson": "^1.12.4",
     "tsx": "^3.12.7",
+    "uploadthing": "^5.3.3",
     "ws": "^8.0.0",
     "zod": "^3.0.0"
   },
